syntax = "proto3";

package sky.error;

message CommonError {
  enum CommonErrorReason {
    COMMON_ERROR_REASON_UNSPECIFIED = 0;
    COMMON_ERROR_REASON_RESOURCE_NOT_FOUND = 1;
    COMMON_ERROR_REASON_UNAUTHORIZED = 2;
    COMMON_ERROR_REASON_REQUIRED_FIELD_MISSING = 3;
    COMMON_ERROR_REASON_INVALID_NAME = 4;
    COMMON_ERROR_REASON_INVALID_PARENT = 5;
    COMMON_ERROR_REASON_INVALID_STRING_FORMAT = 6;
    COMMON_ERROR_REASON_INVALID_ID = 7;
    COMMON_ERROR_REASON_DUPLICATE_ID = 8;
    COMMON_ERROR_REASON_INVALID_DISPLAY_NAME = 9;
    COMMON_ERROR_REASON_INVALID_DATE_TIME = 10;
    COMMON_ERROR_REASON_INVALID_ENUM_VALUE = 11;
    COMMON_ERROR_REASON_UNKNOWN_ONEOF_VARIANT = 12;
    COMMON_ERROR_REASON_INVALID_NUMERIC_VALUE = 13;
    COMMON_ERROR_REASON_FAILED_CONVERT_VALUE = 14;
    COMMON_ERROR_REASON_NUMERIC_OUT_OF_RANGE = 15;
    COMMON_ERROR_REASON_DUPLICATE_VALUE = 16;
    COMMON_ERROR_REASON_ALREADY_EXISTS = 17;
    COMMON_ERROR_REASON_NOT_FOUND = 18;
    COMMON_ERROR_REASON_TYPE_MISMATCH = 19;
  }
}

message UserError {
  enum UserErrorReason {
    USER_ERROR_REASON_UNSPECIFIED = 0;

    USER_ERROR_REASON_INVALID_NAME = 1;
    USER_ERROR_REASON_INVALID_PASSWORD = 2;
    USER_ERROR_REASON_INCORRECT_CREDENTIALS = 3;
  }
}
