syntax = "proto3";

package sky;

import "google/protobuf/empty.proto";
import "sky/resources.proto";

service UserService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {}

  rpc GetMe(GetMeRequest) returns (User) {}
}

message SignUpRequest {
  string name = 1;
  string password = 2;
}

message SignUpResponse {
  string user_id = 1;
}

message GetMeRequest {}
